package src;
public class InvalidFrameException extends Exception{
    public InvalidFrameException(){

    }
}
